recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:3: error: not found: value steps
    spiral(100,steps,2,4);
               ^