recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.code
override def run() {
    spiral(100,steps,2,4);
}